r362 (06. 12. 2025):
Added text float for deployables
Achievement "Hammertime" will show progress in popup instead of in tracker
Improved memory consumption by deferring loading of TimerGui, DigitalGui and SecurityLockGui waypoints until they are needed

r361 (29. 11. 2025):
Buffs: Fixed an issue where options Inspire (Reload) and Inspire (Movement) do not work correctly
Converts Tracker: Fixed an issue where convert count for each player could be misaligned
Jewelry Store: Fixed an issue where loot count does not match (client only)
Ukrainian Job: Fixed an issue where loot count does not match after drop-in (client only)

r360 (28. 11. 2025):
Menu: Fixed a crash when trying to enable or disable trackers or waypoints
Menu: Fixed an issue where some options were disabled when they should be enabled
Santa's Workshop: Fixed a load crash

r359 (27. 11. 2025):
Hostage Tracker: Fixed negative numbers
Timers: Attempt to fix again incorrect time in the tracker and waypoint

r358 (17. 11. 2025):
Buffs: Fixed a crash in Hacker when Unseen Strike is disabled or vice versa

r357 (11. 11. 2025):
Buffs: Attempt to fix buffs overlapping each other

r356 (10. 11. 2025):
VR: Fixed crashes related to Waypoints

r355 (09. 11. 2025):
Menu: Redesigned options menu to use Vanilla style

r354 (04. 11. 2025):
Fixed Beardlib fix not working as intended

r353 (01. 11. 2025):
Experience: Fixed nil value in infamy bonus

r352 (30. 10. 2025):
Experience: Fixed a possible crash when job is not active

r351 (28. 10. 2025):
Aggregated Health Equipment Tracker: Fixed an issue where panel is misaligned
Buffs: Fixed an issue where Interact buff is not visible when putting on mask
Buffs: Optimization in Biker buff
Buffs: Removed persistent state from Maniac, Biker, Berserker and Yakuza - These buffs will be visible if the skill/perk is equipped
Buffs: Removed Hysteria Stacks Refresh option - Buff gets updated once game synces current amount of Hysteria Stacks to other players (once every 4s)