@@ -379,12 +379,12 @@
             "type": "toggle",
             "id": "ehi_other_show_floating_text_choice",
             "title": "ehi_other_show_floating_text",
-            "description": "ehi_other_show_floating_text_desc",
             "callback": "ehi_set_item_value",
             "value": "show_floating_text",
             "default_value": true,
             "children" : [
                 "ehi_other_show_floating_text_distance_choice",
+                "ehi_other_show_floating_text_icon_choice",
                 "ehi_other_show_floating_text_ammo_bag_choice",
                 "ehi_other_show_floating_text_bodybags_bag_choice",
                 "ehi_other_show_floating_text_doctor_bag_choice",
@@ -394,6 +394,15 @@
             "children_f" : {
                 "ehi_other_show_floating_text_throwables_block_on_abilities_choice": "ehi_show_floating_text_throwables_block_on_abilities_choice_1"
             }
+        },
+        {
+            "type": "toggle",
+            "id": "ehi_other_show_floating_text_icon_choice",
+            "title": "ehi_other_show_floating_text_icon",
+            "callback": "ehi_set_item_value",
+            "value": "show_floating_text_icon",
+            "default_value": true,
+            "parent" : "ehi_other_show_floating_text_choice"
         },
         {
             "type": "slider",
@@ -449,7 +458,6 @@
             "type": "toggle",
             "id": "ehi_other_show_floating_text_throwables_choice",
             "title": "ehi_other_show_floating_text_throwables",
-            "description": "ehi_other_show_floating_text_throwables_desc",
             "callback": "ehi_set_item_value",
             "value": "show_floating_text_throwables",
             "default_value": true,
